force-app/main/default/objects/inspire1__Related_Version__c/inspire1__Related_Version__c.object-meta.xml
<CustomObject>
    <label>Related Version</label>
    <nameField>
        <displayFormat>RV-{000000}</displayFormat>
        <label>RV ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Related Versions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>