force-app/main/default/objects/inspire1__Related_Version__c/fields/inspire1__Relationship__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Relationship__c</fullName>
    <description>Defines the type of relationship between User Story (Project Task) and Version.</description>
    <inlineHelpText>Defines the type of relationship between User Story (Project Task) and Version.</inlineHelpText>
    <label>Relationship</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fix Version</fullName>
            </value>
            <value>
                <fullName>Affected Version</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>