force-app/main/default/objects/inspire1__Related_Version__c/fields/inspire1__Release__c.field-meta.xml
<CustomField>
    <fullName>inspire1__Release__c</fullName>
    <description>Release that User Story (Project Task) is related to.</description>
    <label>Release</label>
    <referenceTo>inspire1__Release__c</referenceTo>
    <relationshipLabel>User Stories</relationshipLabel>
    <relationshipName>Related_Version</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>