force-app/main/default/objects/inspire1__Related_Version__c/fields/inspire1__User_Story__c.field-meta.xml
<CustomField>
    <fullName>inspire1__User_Story__c</fullName>
    <description>User Story (Project Task) that is related to Release.</description>
    <inlineHelpText>User Story (Project Task) that is related to Release.</inlineHelpText>
    <label>User Story</label>
    <referenceTo>inspire1__Project_Tasks__c</referenceTo>
    <relationshipLabel>Related Versions</relationshipLabel>
    <relationshipName>Related_Version</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>